array.island.Island.scala.error
Erreur de compilation :
Island:4: error: identifier expected but ']' found.
  for(i <- 1 to num.length[]) {
                           ^Island:9: error: ']' expected but '}' found.
} 
^