array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var niveau:Int = 0
  for(i <- 1 to num.length[]) {
    if(num[i - 1] < num[i])
    	niveau += 1
  }
  return niveau
}